--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Experiência</h2>
       </div>
       <div class="descricao">
-        <p>Desenvolvo pequenos projetos como o<br> Craftsynth utilizando apenas <strong>HTML</strong>, <strong>CSS</strong><br> e <strong>Javascript</strong>. Para aplicativos web como<br> a rede social Blaeh.</p>
+        <p>Desenvolvo pequenos projetos como o<br> Craftsynth utilizando apenas <strong>HTML</strong>, <strong>CSS</strong><br> e <strong>Javascript</strong>.</p>
 
 
         <ul class="lista">
