--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
             <p>Projeto criado para promover o lançamento do sintetizador CraftSynth2.0</p>
           </li>
           <li class="craftsynth">
-            <h3>Promo Sintetizador</h3>
+            <h3>Site Estático</h3>
             <span class="tecnologia">HTML</span>
             <span class="tecnologia">CSS</span>
           </li>
           <li class="craftsynth">
-            <h3>Blaeh</h3>
-            <p>Projeto de rede social para cultivo de plantas raras.</p>
+            <h3>Animais Fantásticos</h3>
+            <p>Site informativo com interações em Javascript.</p>
           </li>
           <li class="craftsynth">
-            <h3>Rede Social</h3>
+            <h3>Site</h3>
             <span class="tecnologia">HTML</span>
             <span class="tecnologia">CSS</span>
             <span class="tecnologia">JavaScript</span>
           </li>
           <li class="craftsynth">
-            <h3>Pedalboard</h3>
-            <p>Site com especificações de pedais de guitarra e sintetizadores.</p>
+            <h3>>Arraf</h3>
+            <p>Site estático promocional de garrafa ecológica.</p>
           </li>
           <li class="craftsynth">
-            <h3>Blog</h3>
+            <h3>Site Estático</h3>
             <span class="tecnologia">HTML</span>
             <span class="tecnologia">CSS</span>
           </li>
@@ -78,7 +78,7 @@
     </div>
     <div class="section">
       <article class="sectiontext">
-        <p>blablablablablablablalbalbalblalbalblablablalbt fhsdfuhsdufihsdufhsdufihsdufhusfihsudfhsuifhujjkjk hfudsfhusdfhudsfhdusfhsuifhufih</p>
+        <p>Atualmente curso Análise e Desenvolvimento de Sistemas com previsão de conclusão em 2024 e sigo estudando o roadmap Front-End.</p>
       </article>
 
       <ul class="list2">
@@ -89,8 +89,8 @@
         </li>
         <li class="list2item">
           <span class="titulo2">CURSANDO</span>
-          <span class="titulo3">Nada de nadaaaaa</span>
-          <span class="titulo2">Nenhum</span>
+          <span class="titulo3">Análise e Desenvolvimento de Sistemas</span>
+          <span class="titulo2">UniCesumar</span>
         </li>
       </ul>
 
