--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span class="tecnologia">JavaScript</span>
           </li>
           <li class="craftsynth">
-            <h3>>Arraf</h3>
+            <h3>Arraf</h3>
             <p>Site estático promocional de garrafa ecológica.</p>
           </li>
           <li class="craftsynth">
@@ -78,7 +78,7 @@
     </div>
     <div class="section">
       <article class="sectiontext">
-        <p>Atualmente curso Análise e Desenvolvimento de Sistemas com previsão de conclusão em 2024 e sigo estudando o roadmap Front-End.</p>
+        <p>Atualmente curso Análise e <br>Desenvolvimento de Sistemas com previsão de conclusão<br> em 2024 e sigo estudando o <br>roadmap Front-End.</p>
       </article>
 
       <ul class="list2">
