--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </li>
         <li class="list2item">
           <span class="titulo2">CURSANDO</span>
-          <span class="titulo3">Análise e Desenvolvimento de Sistemas</span>
+          <span class="titulo3">ADS</span>
           <span class="titulo2">UniCesumar</span>
         </li>
       </ul>
